--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -33,7 +33,7 @@
     grid-template-columns: repeat(1, 1fr);
   }
 }
-@media only screen and (max-width: 980px) {
+@media only screen and (min-width: 601px) and (max-width: 980px) {
   .shop-container {
     display: grid;
     grid-template-columns: 2fr 2fr;
