--- a/src/components/Selected/Selected.css
+++ b/src/components/Selected/Selected.css
@@ -5,13 +5,12 @@
   margin: 5px;
 }
 
-.selectIteam img {
-  border-radius: 100px;
-  width: 35px;
-  border: 1px solid gray;
-}
-
 .selectIteam h5 {
   margin: 3px;
   padding: 5px;
+}
+.selectIteam img {
+  width: 50px;
+  border-radius: 60px;
+  border: 5px solid white;
 }
